Image Picker App from Specific Folder with Design and Permission

--- a/app/src/main/res/layout/pop_up_layout.xml
+++ b/app/src/main/res/layout/pop_up_layout.xml
@@ -2,76 +2,74 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp">
-
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <com.google.android.material.card.MaterialCardView
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:contextClickable="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginBottom="100dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:strokeColor="@color/secondary_color"
-        app:strokeWidth="2dp">
+        app:strokeColor="@color/primary_color"
+        app:strokeWidth="3dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/myId"
-                android:layout_width="0dp"
+                android:id="@+id/patternIdPop"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/secondary_color"
-                android:padding="10dp"
-                android:text="ID"
+                android:background="@color/primary_color"
+                android:padding="15dp"
+                android:text="PATTERN"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/myImage"
+                app:layout_constraintBottom_toTopOf="@+id/popUpImage"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-
             <ImageView
-                android:id="@+id/myImage"
+                android:id="@+id/popUpImage"
                 android:layout_width="match_parent"
-                android:scaleType="fitXY"
-                android:layout_height="300dp"
-                app:layout_constraintBottom_toTopOf="@+id/myPrice"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/myId" />
-
-
-            <TextView
-                android:id="@+id/myPrice"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="@color/secondary_color"
-                android:padding="10dp"
-                android:text="PRICE"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toTopOf="@+id/closeBtnPop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/myImage" />
+                app:layout_constraintTop_toBottomOf="@+id/patternIdPop" />
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/closeBtnPop"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/primary_color"
+                android:insetLeft="0dp"
+                android:insetTop="0dp"
+                android:insetRight="0dp"
+                android:insetBottom="0dp"
+                android:text="Close"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/popUpImage" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.card.MaterialCardView>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
