--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -3,14 +3,14 @@
 
     <item android:id="@+id/b_nav_salwar"
         android:title="Sleeve Patterns"
-        android:icon="@drawable/ic_temp"/>
+        android:icon="@drawable/ic_sleeve_nav"/>
 
     <item android:id="@+id/b_nav_blouse"
         android:title="Work Blouse Patterns"
-        android:icon="@drawable/ic_temp"/>
+        android:icon="@drawable/ic_blouse_nav"/>
 
     <item android:id="@+id/b_nav_neck"
         android:title="Neck Patterns"
-        android:icon="@drawable/ic_temp"/>
+        android:icon="@drawable/ic_neck_nav"/>
 
 </menu>
