--- a/app/src/main/res/layout/pop_up_layout.xml
+++ b/app/src/main/res/layout/pop_up_layout.xml
@@ -52,17 +52,16 @@
                 app:layout_constraintStart_toEndOf="@+id/patternIdPop"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
+            <com.zolad.zoominimageview.ZoomInImageView
                 android:id="@+id/popUpImage"
-                android:scaleType="fitXY"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:background="@drawable/gradient_bg"
+                android:scaleType="fitXY"
                 app:layout_constraintBottom_toTopOf="@+id/patternIdPricePop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/closeBtnPop" />
-
 
             <TextView
                 android:id="@+id/patternIdPricePop"
@@ -78,7 +77,6 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
-
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
