--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -1,18 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/b_nav_neck"
-        android:title="Neck Patterns"
+    <item android:id="@+id/b_nav_salwar_neck"
+        android:title="Salwar Neck Patterns"
+        android:icon="@drawable/ic_sleeve_nav"/>
+
+    <item android:id="@+id/b_nav_salwar_sleeve"
+        android:title="Salwar Sleeve Patterns"
+        android:icon="@drawable/ic_work_blouse_nav"/>
+
+    <item android:id="@+id/b_nav_blouse_neck"
+        android:title="Blouse Neck Patterns"
         android:icon="@drawable/ic_neck_nav"/>
 
-    <item android:id="@+id/b_nav_sleeve"
-        android:title="Sleeve Patterns"
+    <item android:id="@+id/b_nav_blouse_sleeve"
+        android:title="Blouse Sleeve Patterns"
         android:icon="@drawable/ic_sleeve_nav"/>
 
     <item android:id="@+id/b_nav_work_blouse"
         android:title="Work Blouse Patterns"
         android:icon="@drawable/ic_work_blouse_nav"/>
-
 
 
 </menu>
