--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,9 @@
     <color name="red">#E02401</color>
     <color name="primary_color">#E26A2C</color>
     <color name="secondary_color">#161E54</color>
+    
+    
+    <color name="salwarColor">#00a19d</color>
+    <color name="blouseColor">#6f69ac</color>
 
 </resources>
