--- a/app/src/main/res/layout/image_layout.xml
+++ b/app/src/main/res/layout/image_layout.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp">
-
+    android:layout_margin="3dp">
 
     <com.google.android.material.card.MaterialCardView
-        android:layout_width="250dp"
+        android:layout_width="255dp"
         android:layout_height="wrap_content"
         android:clickable="true"
         android:id="@+id/myCard"
@@ -30,9 +29,9 @@
                 android:id="@+id/myId"
                 android:textAllCaps="true"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="25dp"
                 android:background="@color/secondary_color"
-                android:padding="10dp"
+                android:padding="1dp"
                 android:text="ID"
                 android:textAlignment="center"
                 android:textColor="@color/white"
@@ -42,24 +41,22 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-
             <ImageView
                 android:id="@+id/myImage"
-                android:layout_width="250dp"
+                android:layout_width="255dp"
                 android:scaleType="fitXY"
-                android:layout_height="250dp"
+                android:layout_height="200dp"
                 app:layout_constraintBottom_toTopOf="@+id/myPrice"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/myId" />
 
-
             <TextView
                 android:id="@+id/myPrice"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="25sp"
                 android:background="@color/secondary_color"
-                android:padding="10dp"
+                android:padding="1dp"
                 android:text="PRICE"
                 android:textAlignment="center"
                 android:textColor="@color/white"
@@ -70,11 +67,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/myImage" />
 
-
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.card.MaterialCardView>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
