--- a/app/src/main/res/layout/pop_up_layout.xml
+++ b/app/src/main/res/layout/pop_up_layout.xml
@@ -30,7 +30,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@color/secondary_color"
-                android:padding="20dp"
+                android:padding="10dp"
+                android:textSize="20sp"
                 android:text="PATTERN"
                 android:textAlignment="center"
                 android:textAllCaps="true"
@@ -46,19 +47,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/red"
-                android:padding="15dp"
+                android:padding="4dp"
                 android:src="@drawable/ic_close"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/patternIdPop"
                 app:layout_constraintTop_toTopOf="parent" />
 
 
-<!--            android:scaleType="fitXY"-->
+            <!--            android:scaleType="fitXY"-->
             <com.jsibbold.zoomage.ZoomageView
                 android:id="@+id/popUpImage"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:background="@drawable/gradient_bg"
+                android:background="@color/black"
 
                 app:layout_constraintBottom_toTopOf="@+id/patternIdPricePop"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -70,11 +71,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@color/green"
-                android:padding="20dp"
+                android:padding="5dp"
                 android:text="Price"
-                android:textSize="24sp"
                 android:textAlignment="center"
                 android:textColor="@color/white"
+                android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
