--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -3,34 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/my_nav"
-    app:startDestination="@id/sn_fragment">
+    app:startDestination="@id/sp_fragment">
 
+<!--    start: Salwar-->
     <fragment
-        android:id="@+id/bn_fragment"
-        android:name="mb.ganesh.imagepickerapp.patterns.BlouseNeckFragment"
-        android:label="Blouse Neck"
-        tools:layout="@layout/fragment_work_blouse" />
+        android:id="@+id/sp_fragment"
+        android:name="mb.ganesh.imagepickerapp.patterns.SalwarPatternFragment"
+        android:label="Salwar Pattern"
+        tools:layout="@layout/pattern_fragment_layout" />
+<!--    blouse-->
     <fragment
-        android:id="@+id/bs_fragment"
-        android:name="mb.ganesh.imagepickerapp.patterns.BlouseSleeveFragment"
-        android:label="Work Sleeve Patterns"
-        tools:layout="@layout/fragment_work_blouse" />
-    <fragment
-        android:id="@+id/sn_fragment"
-        android:name="mb.ganesh.imagepickerapp.patterns.SalwarNeckFragment"
-        android:label="Salwar Neck Patterns"
-        tools:layout="@layout/fragment_work_blouse" />
-
-    <fragment
-        android:id="@+id/ss_fragment"
-        android:name="mb.ganesh.imagepickerapp.patterns.SalwarSleeveFragment"
-        android:label="Salwar Sleeve Patterns"
-        tools:layout="@layout/fragment_work_blouse" />
-
+        android:id="@+id/bp_fragment"
+        android:name="mb.ganesh.imagepickerapp.patterns.BlousePatternFragment"
+        android:label="Blouse Patterns"
+        tools:layout="@layout/pattern_fragment_layout" />
+<!--    work blouse-->
     <fragment
         android:id="@+id/wb_fragment"
-        android:name="mb.ganesh.imagepickerapp.patterns.WorkBlouseFragment"
+        android:name="mb.ganesh.imagepickerapp.patterns.WorkBlousePatternFragment"
         android:label="Work Blouse Patterns"
-        tools:layout="@layout/fragment_work_blouse" />
+        tools:layout="@layout/pattern_fragment_layout" />
+<!--    top new-->
+    <fragment
+        android:id="@+id/tn_fragment"
+        android:name="mb.ganesh.imagepickerapp.patterns.TopNewPatternFragment"
+        android:label="Top New Patterns"
+        tools:layout="@layout/pattern_fragment_layout" />
+
+<!--    <fragment-->
+<!--        android:id="@+id/wb_fragment"-->
+<!--        android:name="mb.ganesh.imagepickerapp.patterns.WorkBlousePatternFragment"-->
+<!--        android:label="Work Blouse Patterns"-->
+<!--        tools:layout="@layout/fragment_work_blouse" />-->
 
 </navigation>
