--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,4 +21,10 @@
     <dimen name="m3_bottom_nav_item_active_indicator_width">64dp</dimen>
     <dimen name="m3_bottom_nav_item_active_indicator_height">32dp</dimen>
     <dimen name="m3_bottom_nav_item_active_indicator_margin_horizontal">4dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="appbar_padding">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="appbar_padding_top">8dp</dimen>
 </resources>
